--- a/database_application/templates/database_application/home.html
+++ b/database_application/templates/database_application/home.html
@@ -4,7 +4,10 @@
         Welcome to the recipe database!
     </h1>
 
-    <form>
+    <form action='users' method='post'>
+
+        {% csrf_token %}
+
         <label for="input">Please enter a database query (or help for help).</label><br>
         <input type="text" id="input" name="input">
         <input type="submit" value="Submit">
