changed user table in urls to query, right now simply calls the user_table function but will be expanded to respond to any given query

--- a/database_application/templates/database_application/home.html
+++ b/database_application/templates/database_application/home.html
@@ -4,7 +4,7 @@
         Welcome to the recipe database!
     </h1>
 
-    <form action='users' method='post'>
+    <form action='query' method='post'>
 
         {% csrf_token %}
 
