added request query for help command

--- a/database_application/templates/database_application/home.html
+++ b/database_application/templates/database_application/home.html
@@ -11,5 +11,7 @@
         <label for="input">Please enter a database query (or help for help).</label><br>
         <input type="text" id="input" name="input">
         <input type="submit" value="Submit">
+
+        {{extra_stuff}}
     </form>
 </html>
