--- a/database_application/templates/database_application/home.html
+++ b/database_application/templates/database_application/home.html
@@ -10,7 +10,7 @@
 
         <label for="input">Please enter a database query (or help for help).</label><br>
         <input type="text" id="input" name="input">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit"> <br>
 
         {{extra_stuff}}
     </form>
