added query stuff in the view

--- a/database_application/templates/database_application/table.html
+++ b/database_application/templates/database_application/table.html
@@ -4,8 +4,9 @@
         Users
     </h1>
 	
-    {% for users in usertable %}
+    <!-- {% for users in usertable %}
     {{users.u_uid}}, {{users.u_name}}<br>
-    {% endfor %}
+    {% endfor %} -->
+    {{usertable}}
 
 </html>
