refactored a ton of stuff and got the redirecting working on the post request, honestly no idea how because the code is almost identical to how it was when I woke up this morning but i'll tak eit

--- a/database_application/templates/database_application/home.html
+++ b/database_application/templates/database_application/home.html
@@ -4,13 +4,15 @@
         Welcome to the recipe database!
     </h1>
 
-    <form action='query' method='post'>
+    <form action='.' method='post'>
 
         {% csrf_token %}
 
         <label for="input">Please enter a database query (or help for help).</label><br>
         <input type="text" id="input" name="input">
         <input type="submit" value="Submit"> <br>
+
+        {{extra_stuff}}
 
     </form>
 </html>
