utensil displaying page

--- a/database_application/templates/database_application/table.html
+++ b/database_application/templates/database_application/table.html
@@ -4,9 +4,6 @@
         {{title|default:"Users"}}
     </h1>
 	
-    <!-- {% for users in usertable %}
-    {{users.u_uid}}, {{users.u_name}}<br>
-    {% endfor %} -->
-    {{usertable}}
+    <pre>{{table}}</pre>
 
 </html>
